@@ -5,7 +5,7 @@
 #                            | (__| |_| |  _ <| |___
 #                             \___|\___/|_| \_\_____|
 #
-# Copyright (C) 1998 - 2008, Daniel Stenberg, <daniel@haxx.se>, et al.
+# Copyright (C) 1998 - 2009, Daniel Stenberg, <daniel@haxx.se>, et al.
 #
 # This software is licensed as described in the file COPYING, which
 # you should have received as part of this distribution. The terms
@@ -18,7 +18,7 @@
 # This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 # KIND, either express or implied.
 #
-# $Id: curl-reentrant.m4,v 1.3 2008-10-14 18:44:27 yangtse Exp $
+# $Id: curl-reentrant.m4,v 1.4 2009-09-23 21:53:24 bagder Exp $
 #***************************************************************************
 
 # File version for 'aclocal' use. Keep it a single number.
@@ -377,7 +377,7 @@ dnl Internal macro for CURL_CONFIGURE_REENTRANT.
 
 AC_DEFUN([CURL_CHECK_NEED_REENTRANT_SYSTEM], [
   case $host in
-    *-*-solaris*)
+    *-*-solaris* | *-*-hpux*)
       tmp_need_reentrant="yes"
       ;;
     *)
